Improved overall operations of swamd daemon
This commit is to improve the existing opeartions of swamd.

Signed-off-by: Geunsik Lim <leemgs@gmail.com>

--- a/on-demand-swapd/Makefile
+++ b/on-demand-swapd/Makefile
@@ -1,28 +1,25 @@
 # User-space On-Demand SWAP daemon
-# It is to activate kernel-space on-demand swap.
 
 BINDIR=/usr/sbin
-MANDIR=/usr/man
-MANEXT=8
 
-# You can add below custom flags to the CFLAGS line to override swapd.h
-#  -DTMPDIR=\"/var/tmp\"	Directory to create swap files in
+# You can add below custom flags to the CFLAGS line to override swam.h
+#  -DTMPDIR=\"/var/tmp\"	Directory to create swam files in
 #  -DPRIORITY=-4		Nice level for daemon to run at
 #  -DINTERVAL=30		Interval to check free VM
-#  -DNUMCHUNKS=8		Maximum number of swap files
-#  -DCHUNKSZ=4*1024*1024       	Size of each swap file
+#  -DNUMCHUNKS=8		Maximum number of swam files
+#  -DCHUNKSZ=4*1024*1024       	Size of each swam file
 #  -DLOWER=CHUNKSZ/2		Lower limit for VM
 #  -DUPPER=CHUNKSZ		Upper limit for VM
 
 CFLAGS  = -O2 -Wall
 LDFLAGS = -s
 
-swapd: swapd.o
+swamd: swamd.o
 
-swapd.o: swapd.c swapd.h
+swamd.o: swamd.c swamd.h
 
-install: swapd swapd.man
+install: swapd
 	install -s -m 0755 swapd $(BINDIR)
 
 clean:
-	rm -f *.o core
+	rm -f *.o core swamd
